<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interface_msgs</name>
  <version>1.0.0</version>
  <description>Message definitions used in the Interface container</description>
  <maintainer email="n.rood@avular.com">niels</maintainer>
  <license>Avular</license>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>cmake_avular</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <debian_depend>cmake-avular</debian_depend>
    <debian_depend>ros-humble-ament-cmake</debian_depend>
    <debian_depend>ros-humble-rosidl-default-generators</debian_depend>
    <debian_depend>ros-humble-rosidl-default-runtime</debian_depend>
  </export>
</package>
