<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_manager</name>
  <version>1.0.0</version>
  <description>Manages maps</description>
  <maintainer email="n.rood@avular.com">niels</maintainer>
  <license>Avular</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>cmake_avular</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>interface_msgs</build_depend>
  <build_depend>slam_manager_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>interface_msgs</exec_depend>
  <exec_depend>slam_manager_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>PCL</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>interface_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <debian_depend>cmake-avular</debian_depend>

    <debian_depend>ros-humble-sensor-msgs</debian_depend>
    <debian_depend>ros-humble-nav-msgs</debian_depend>
    <debian_depend>ros-humble-pcl-conversions</debian_depend>
    <debian_depend>ros-humble-pcl-msgs</debian_depend>
    <debian_depend>ros-humble-pcl-ros</debian_depend>

    <debian_depend>telerob-interface-msgs</debian_depend>
    <debian_depend>telerob-slam-manager-msgs</debian_depend>
  </export>
</package>
