<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_visualizer</name>
  <version>1.0.0</version>
  <description>This node generates a map based on a point cloud</description>
  <maintainer email="j.verheesen@avular.com">jarno</maintainer>
  <license>Avular</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>cmake-avular</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interface_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>interface_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <debian_depend>cmake-avular</debian_depend>
    <debian_depend>ros-humble-rclcpp</debian_depend>
    <debian_depend>ros-humble-std-msgs</debian_depend>
    <debian_depend>ros-humble-geometry-msgs</debian_depend>
    <debian_depend>telerob-interface-msgs</debian_depend>

  </export>
</package>
