<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>network_manager</name>
  <version>1.0.0</version>
  <description>Simple network manager node</description>
  <maintainer email="n.rood@avular.com">niels</maintainer>
  <license>Avular</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>interface_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <debian_depend>telerob-interface-msgs</debian_depend>
  </export>
</package>
