<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_manager_msgs</name>
  <version>1.0.0</version>
  <description>slam_manager_msgs defines custom messages for TeleRobbs Slam Manager.</description>
  <author email="j.sijs@avular.com">Joris Sijs</author>
  <maintainer email="j.sijs@avular.com">Joris Sijs</maintainer>
  <license>Avular Confidential</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>cmake_avular</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <debian_depend>ros-humble-ament-cmake</debian_depend>
    <debian_depend>cmake-avular</debian_depend>
    <debian_depend>ros-humble-rosidl-default-generators</debian_depend>
    <debian_depend>ros-humble-rosidl-default-runtime</debian_depend>
    <debian_depend>ros-humble-builtin-interfaces</debian_depend>
    <debian_depend>ros-humble-std-msgs</debian_depend>
  </export>
</package>
